--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>João Longuinho</title>
-    <link rel="stylesheet" href="assets/style/style.css">
+    <link rel="stylesheet" href="style.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -15,7 +15,7 @@
     <main>
         <article class="main-profile-pic-container">
             <section class="profile-pic-container">
-                <a href="home.html"><img src="assets/img/profile-pic.jpg" alt="Foto de Perfil" class="profile-pic" id="profile-pic" onclick="clickInPicture()"></a>
+                <a href="home.html"><img src="profile-pic.jpg" alt="Foto de Perfil" class="profile-pic" id="profile-pic" onclick="clickInPicture()"></a>
                 <button id="btn-return-pic" onclick="displayProfAgain()">Return-pic</button><br>
                 <!--<p id="welcome">Bem vindo ao meu website</p>-->
             </section>
